force-app/main/default/objects/custom_create55__c/custom_create55__c.object-meta.xml
<CustomObject>
    <label>Custom created object55</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects55</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>