force-app/main/default/objects/custom_create55__c/fields/custom_create_55field566__c.field-meta.xml
<CustomField>
    <fullName>custom_create_55field566__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 55field566</label>
    <type>Checkbox</type>
</CustomField>